Add tests for Rasterizer.get and fix a bug where IE8 on Windows Vista+ incorrectly gets classified as DirectWrite.

--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
     <script src="dom-test.js"></script>
     <script src="version-test.js"></script>
     <script src="useragent-test.js"></script>
+    <script src="rasterizer-test.js"></script>
     <script>
       window.onload = function () {
         mocha.run();
