--- a/test/index.html
+++ b/test/index.html
@@ -20,6 +20,7 @@
     <script src="version-test.js"></script>
     <script src="useragent-test.js"></script>
     <script src="rasterizer-test.js"></script>
+    <script src="antialiasing-test.js"></script>
     <script>
       window.onload = function () {
         mocha.run();
