--- a/website/index.html
+++ b/website/index.html
@@ -93,7 +93,16 @@
         <h3>Follow us on Twitter</h3>
         <p>Follow <a href="http://twitter.com/typerendering">Type Rendering on Twitter</a> and tell folks that you care about how type looks on the web – in all browsers, in all operating systems, and on all devices.</p>
       </section>
-      <p>Type Rendering Mix is crafted with care by <a href="http://nicewebtype.com/">Tim Brown</a> and <a href="http://www.bramstein.com">Bram Stein</a>. Set in <a href="http://www.janfromm.de/typefaces/rooneysans/overview/">Rooney Sans</a> and <a href="http://levien.com/type/myfonts/inconsolata.html">Inconsolata</a>, served by <a href="http://www.typekit.com/">Typekit</a>. View the <a href="/old/">old type rendering site</a>.</p>
+      <p>Type Rendering Mix is crafted with care by <a href="http://nicewebtype.com/">Tim Brown</a> and <a href="http://www.bramstein.com">Bram Stein</a>. Set in <a href="http://www.janfromm.de/typefaces/rooneysans/overview/">Rooney Sans</a> and <a href="http://levien.com/type/myfonts/inconsolata.html">Inconsolata</a>, served by <a href="http://www.typekit.com/">Typekit</a>. View the <a href="/old/">old type rendering site</a>. Report bugs and other issues at the <a href="https://github.com/bramstein/trmix">Type Rendering Mix Github repository.</a></p>
     </footer>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-46292041-1', 'typerendering.com');
+        ga('send', 'pageview');
+    </script>
   </body>
 </html>
