Add code tag around literal.

--- a/website/index.html
+++ b/website/index.html
@@ -70,7 +70,7 @@
         <figcaption>From left to right: the letter “a” rendered without antialiasing, with grayscale antialiasing and with subpixel antialiasing.</figcaption>
       </figure>
       -->
-      <p>If Type Rendering Mix can’t determine the antialiasing method with absolute certainty it will attempt to guess. In this case unknown will be added to the class name:</p>
+      <p>If Type Rendering Mix can’t determine the antialiasing method with absolute certainty it will attempt to guess. In this case <code>unknown</code> will be added to the class name:</p>
 
       <ul>
         <li><code>tr-aa-unknown-none</code> when no antialiasing is guessed;</li>
