Opera was duplicated in the supported browser list.

--- a/website/index.html
+++ b/website/index.html
@@ -93,7 +93,7 @@
     <footer>
       <section>
         <h3>Browser support</h3>
-        <p>Type Rendering Mix supports IE6+, Chrome, Firefox, Safari, Opera, Android 2.2+, iOS 4.2+ and Opera. Other browsers may work, but are not extensively tested.</p>
+        <p>Type Rendering Mix supports IE6+, Chrome, Firefox, Safari, Opera, Android 2.2+, and iOS 4.2+. Other browsers may work, but are not extensively tested.</p>
       </section>
       <section>
         <h3>Learn more?</h3>
