Updated Twitter links.

--- a/website/index.html
+++ b/website/index.html
@@ -101,7 +101,7 @@
       </section>
       <section>
         <h3>Follow us on Twitter</h3>
-        <p>Follow <a href="http://twitter.com/typerendering">Type Rendering on Twitter</a> and tell folks that you care about how type looks on the web – in all browsers, in all operating systems, and on all devices.</p>
+        <p>Follow <a href="http://twitter.com/nicewebtype">@nicewebtype</a> and <a href="http://twitter.com/bram_stein">@bramstein</a> and tell folks that you care about how type looks – in all browsers, in all operating systems, and on all devices.</p>
       </section>
       <p>Type Rendering Mix is crafted with care by <a href="http://nicewebtype.com/">Tim Brown</a> and <a href="http://www.bramstein.com">Bram Stein</a>. Set in <a href="http://www.janfromm.de/typefaces/rooneysans/overview/">Rooney Sans</a> and <a href="http://levien.com/type/myfonts/inconsolata.html">Inconsolata</a>, served by <a href="http://www.typekit.com/">Typekit</a>. View the <a href="/old/">old Type Rendering site</a>.</p>
     </footer>
