--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
     <script>CLOSURE_NO_DEPS = true;</script>
     <script src="../vendor/google/base.js"></script>
     <script src="../node_modules/mocha/mocha.js"></script>
-    <script src="../node_modules/expect.js/expect.js"></script>
+    <script src="../node_modules/expect.js/index.js"></script>
     <script src="../node_modules/mocha-browserstack/lib/mocha-browserstack.js"></script>
     <script src="deps.js"></script>
     <script>
@@ -25,7 +25,7 @@
     <script>
       window.onload = function () {
         mocha.run();
-      };  
+      };
     </script>
   </body>
 </html>
