Website: Fixed typo
Linter will be happy with this.

--- a/website/index.html
+++ b/website/index.html
@@ -18,8 +18,8 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   <body>
-    <header class="animatedBlocks">
-      <div class="block-container"></div>
+    <header class="animated-blocks">
+      <div id="block-container"></div>
       <div class="content">
           <span class="logo">TR</span>
           <h1>Type Rendering Mix</h1>
@@ -122,6 +122,6 @@
         ga('create', 'UA-46292041-1', 'typerendering.com');
         ga('send', 'pageview');
     </script>
-    <script src="js/animatedBlocks.js"></script>
+    <script src="js/animated-blocks.js"></script>
   </body>
 </html>
